[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pr-review"
version = "2.0.0"
description = "AI-powered CLI tool for reviewing pull requests and code changes"
readme = "README.md"
authors = [
    {name = "Jesse Gordon"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "click>=8.1.3",
    "rich>=13.3.5",
    "pygments>=2.15.0",
    "google-generativeai>=0.4.0",
    "tomli>=2.0.1; python_version < '3.11'",
    "tomli-w>=1.0.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    # Dependencies needed for PyPI publishing are included here
    # as they are often used during development/local testing too.
    "build>=1.0.0",
    "twine>=4.0.0",
]
build = [
    "pyinstaller>=6.0.0",
    "setuptools>=61.0.0",
]
publish = [
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/jesseGordon/cli-pr-reviewer"
"Bug Tracker" = "https://github.com/jesseGordon/cli-pr-reviewer/issues"

[project.scripts]
pr-review = "pr_review.cli:main"

[tool.setuptools]
packages = ["pr_review"]

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"] 